Load Excalifront up front to avoid layout shift

--- a/algebraic-effects/styles.css
+++ b/algebraic-effects/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Excalifont;
+  src: url('/Excalifont-Regular.woff2');
+}
+
 @keyframes highlight-color-shift {
   from {
     background-color: #ffea0030;
